# mcscoqsat

./: .gitignore  CoqMakefile  CoqMakefile.local  CoqSolver.hs  Dockerfile  LICENSE  Main.hs  Makefile  README.md  SolverDefinitions.v  SolverInterface.v  SolverLemmas.v  _CoqProject  coqsat.cabal  stack.yaml
tests/sat/: ais12.cnf
