cabal-version:      3.0
name:               coqsat
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Vasily Fedorov
maintainer:         vasek.fedorov@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wno-orphans -Wno-missing-signatures

executable coqsat
    import:           warnings
    main-is:          Main.hs
    other-modules:    CoqSolver
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
                    , parsec
                    , directory
                    , filepath
    hs-source-dirs:   .
    default-language: Haskell2010
